@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019, 2023 Obeo.
+ * Copyright (c) 2019, 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -12,7 +12,7 @@
  *******************************************************************************/
 package org.eclipse.sirius.components.collaborative.forms.services;
 
-import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -26,7 +26,7 @@ import org.eclipse.sirius.components.forms.description.PageDescription;
  */
 public class PropertiesDescriptionRegistry implements IPropertiesDescriptionRegistry {
 
-    private final Map<String, PageDescription> id2propertiesDescriptions = new HashMap<>();
+    private final Map<String, PageDescription> id2propertiesDescriptions = new LinkedHashMap<>();
 
     @Override
     public void add(PageDescription pageDescription) {
